Replaced Bleach with Naruto Shippuden also made it so it is easier to read the synopsis of an anime by increasing the font size and line height

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                         <p>Gon Freecss aspires to become a Hunter, an exceptional being capable of greatness. With his friends and his potential, he seeks out his father, who left him when he was younger.</p>
                     </div>
                 </a>
-                <a href="Anime_pages/bleach.html">
+                <a href="Anime_pages/naruto.html">
                     <div>
-                        <img src="https://m.media-amazon.com/images/M/MV5BOWQwOWY5NTUtMjAyZi00YjQzLTkwODgtNmQwZjU1MGIzZDhjXkEyXkFqcGc@._V1_.jpg" alt="Bleach">
-                        <h3>Bleach</h3>
-                        <p>High school student Ichigo Kurosaki, who has the ability to see ghosts, gains soul reaper powers from Rukia Kuchiki and sets out to save the world from "Hollows".</p>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/9cbcf87f54194742e7686119089478f8.jpg" alt="Bleach">
+                        <h3>Naruto: Shippuden</h3>
+                        <p>Naruto Uzumaki, is a loud, hyperactive, adolescent ninja who constantly searches for approval and recognition, as well as to become Hokage, who is acknowledged as the leader and strongest of all ninja in the village.</p>
                     </div>
                 </a>
                 <a href="Anime_pages/death-note.html">
@@ -158,10 +158,6 @@
                         <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/b8169841c47c010d664f293fcec036fb.jpg" alt="Blue-Box">
                         <h3>Blue Box</h3>
                         <p>Third-year student Taiki joins badminton club. Despite being an early riser, star player Chinatsu, his crush, arrives first. Living together unexpectedly, Taiki strives to reach Nationals to impress Chinatsu.</p>
-                        <!-- <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/04e65044c0d9637367efe0cddf7dd205.jpg" alt="Clannad">
-                        <h3>Clannad: After Story</h3>
-                        <p>The emotionally devastating and heartwarming continuation of the lives of Tomoya and Nagisa as they navigate the complexities of adulthood and family.</p>
-                    </div> -->
                     </div> 
                 </a>
                 <a href="Anime_pages/fruit-basket.html">
