--- a/Anime_pages/naruto.html
+++ b/Anime_pages/naruto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bleach</title>
+    <title>Naruto: Shippuden</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -44,13 +44,13 @@
     <main>
         <section>
             <div>
-                <img src="https://m.media-amazon.com/images/M/MV5BOWQwOWY5NTUtMjAyZi00YjQzLTkwODgtNmQwZjU1MGIzZDhjXkEyXkFqcGc@._V1_.jpg" alt="Bleach">
+                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/9cbcf87f54194742e7686119089478f8.jpg" alt="Naruto: Shippuden">
             </div>
             <div>
-                <h1>Bleach</h1>
+                <h1>Naruto: Shippuden</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    Ichigo Kurosaki is an ordinary high schooler—until his family is attacked by a Hollow, a corrupt spirit that seeks to devour human souls. It is then that he meets a Soul Reaper named Rukia Kuchiki, who gets injured while protecting Ichigo's family from the assailant. To save his family, Ichigo accepts Rukia's offer of taking her powers and becomes a Soul Reaper as a result. However, as Rukia is unable to regain her powers, Ichigo is given the daunting task of hunting down the Hollows that plague their town. However, he is not alone in his fight, as he is later joined by his friends—classmates Orihime Inoue, Yasutora Sado, and Uryuu Ishida—who each have their own unique abilities. As Ichigo and his comrades get used to their new duties and support each other on and off the battlefield, the young Soul Reaper soon learns that the Hollows are not the only real threat to the human world.
+                    It has been two and a half years since Naruto Uzumaki left Konohagakure, the Hidden Leaf Village, for intense training following events which fueled his desire to be stronger. Now Akatsuki, the mysterious organization of elite rogue ninja, is closing in on their grand plan which may threaten the safety of the entire shinobi world. Although Naruto is older and sinister events loom on the horizon, he has changed little in personality—still rambunctious and childish—though he is now far more confident and possesses an even greater determination to protect his friends and home. Come whatever may, Naruto will carry on with the fight for what is important to him, even at the expense of his own body, in the continuation of the saga about the boy who wishes to become Hokage.
                 </p>
             </div>
         </section>
@@ -58,18 +58,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> October 5, 2004 to March 27, 2012<br>
-                    <span>Premiered:</span> Fall 2004<br>
-                    <span>Duration:</span> 24m<br>
+                    <span>Aired:</span> February 15, 2007 to March 23, 2017<br>
+                    <span>Premiered:</span> Winter 2007<br>
+                    <span>Duration:</span> 23m<br>
                     <span>Status:</span> Finished Airing<br>
-                    <span>IMDB Score:</span> 8.2/10<br>
-                    <span>Genre:</span> Action, Adventure, Comedy, Drama, Shounen<br>
+                    <span>IMDB Score:</span> 8.7/10<br>
+                    <span>Genre:</span> Action, Adventure, Comedy, Martial Arts, Shounen<br>
                     <span>Studio:</span> Studio Pierrot
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/1HJs-quw61A?si=Fvc29QqVY3KrZu5K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/22R0j8UKRzY?si=RAFujCxIpoT1SKPC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
