--- a/Anime_pages/fruit-basket.html
+++ b/Anime_pages/fruit-basket.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="anime-page.css">
 </head>
 <body>
-    <header>
+   <header>
         <nav>
             <a href="../index.html"><h1>Anime Guru</h1></a>
             <div>
@@ -30,14 +30,14 @@
                     </select>
                 </form>
                 <a>Random</a>
-                <a href="login.html">Community</a>
+                <a href="../login.html">Community</a>
             </div>
             <form>
                 <input type="search" placeholder="Search Anime">
             </form>
             <div>
-                <a href="login.html"><button class="sign">Sign In</button></a>
-                <a href="signup.html"><button class="sign">Sign Up</button></a>
+                <a href="../login.html"><button class="sign">Sign In</button></a>
+                <a href="../signup.html"><button class="sign">Sign Up</button></a>
             </div>
         </nav>
     </header>
