--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Anime-Head.css">
     <link rel="stylesheet" href="Anime-Main.css">
+    <link rel="stylesheet" href="Anime-Footer.css">
 </head>
 <body>
     <header>
@@ -45,7 +46,7 @@
         </nav>
     </header>
     <main>
-        <section class="topic">
+        <section class="topic" id="top">
             <h2>Top Rated</h2>
             <div class="container">
                 <a href="Anime_pages/aot.html">
@@ -144,7 +145,7 @@
 
 
         <section class="topic">
-            <h2>If You Like Romance</h2>
+            <h2>Romance</h2>
             <div class="container">
                 <a href="Anime_pages/your-name.html">
                     <div>
@@ -288,5 +289,17 @@
             </div>
         </section>
     </main>
+    <section id="footer">
+        <div class="div1">
+            <h1>Anime Guru</h1>
+            <h3>The Easiest Way To Find Your Next Obsession</h3>
+            <p>This is an anime reccomendation site which helps you find animes based on your taste. Whether you are new to anime or tired of looking for something new, we've got you covered.</p>
+        </div>
+        <div class="div2">
+            <h2>Contact Us</h2>
+            <a href="https://github.com/Prakhar-Jaiswal17" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/prakhar-jaiswal-355460255/" target="_blank">LinkedIn</a>
+        </div>
+    </section>
 </body>
 </html>
