Added newbie section and improved ui

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Anime Guru</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=WDXL+Lubrifont+SC&family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Anime-Head.css">
     <link rel="stylesheet" href="Anime-Main.css">
     <link rel="stylesheet" href="Anime-Footer.css">
@@ -143,7 +143,53 @@
             </div>
         </section>
 
-
+        <section class="topic">
+            <h2>New to Anime? Try These</h2>
+            <div class="container">
+                <a href="Anime_pages/demon-slayer.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/30df93feaa422101659e14d0a2a2f582.jpg" alt="Demon-Slayer">
+                        <h3>Demon Slayer</h3>
+                        <p>A family is attacked by demons and only two members survive - Tanjiro and his sister Nezuko, who is turning into a demon slowly. Tanjiro sets out to become a demon slayer to avenge his family and cure his sister.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/death-note.html">
+                    <div>
+                        <img src="https://m.media-amazon.com/images/M/MV5BYTgyZDhmMTEtZDFhNi00MTc4LTg3NjUtYWJlNGE5Mzk2NzMxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Deat-Note">
+                        <h3>Death Note</h3>
+                        <p>An intelligent high school student goes on a secret crusade to eliminate criminals from the world after discovering a notebook capable of killing anyone whose name is written into it.</p>
+                    </div>
+                </a>
+                </a>
+                <a href="Anime_pages/jjk.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/82402f796b7d84d7071ab1e03ff7747a.jpg" alt="Jujutsu-Kaisen">
+                        <h3>Jujutsu Kaisen</h3>
+                        <p>A boy swallows a cursed talisman - the finger of a demon - and becomes cursed himself. He enters a shaman's school to be able to locate the demon's other body parts and thus exorcise himself.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/silent-voice.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/7fc61d82b89949dff4319bd73ff2d456.jpg" alt="A-Silent-Voice">
+                        <h3>A Silent Voice</h3>
+                        <p>A deaf girl, Shoko, is bullied by the popular Shoya. As Shoya continues to bully Shoko, the class turns its back on him. Shoko transfers and Shoya grows up as an outcast. Alone and depressed, the regretful Shoya finds Shoko to make amends.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/opm.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/f5d173f8317f592c6c70d594829b89e4.jpg" alt="OPM">
+                        <h3>One Punch Man</h3>
+                        <p>The story of Saitama, a hero who can defeat any opponent with a single punch but is bored by the lack of challenge. It expertly parodies superhero tropes with hilarious results.</p>
+                    </div>
+                <a href="Anime_pages/your-name.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/16eec56baf8f3fcc6430607f58ce3d12.jpg" alt="Your-Name">
+                        <h3>Your Name</h3>
+                        <p>Two teenagers share a profound, magical connection upon discovering they are swapping bodies. Things manage to become even more complicated when the boy and girl decide to meet in person.</p>
+                    </div>
+                </a>
+            </div>
+        </section>
         <section class="topic">
             <h2>Romance</h2>
             <div class="container">
@@ -289,6 +335,8 @@
             </div>
         </section>
     </main>
+
+    
     <section id="footer">
         <div class="div1">
             <h1>Anime Guru</h1>
@@ -296,7 +344,7 @@
             <p>This is an anime reccomendation site which helps you find animes based on your taste. Whether you are new to anime or tired of looking for something new, we've got you covered.</p>
         </div>
         <div class="div2">
-            <h2>Contact Us</h2>
+            <h2>Contact Me</h2>
             <a href="https://github.com/Prakhar-Jaiswal17" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/prakhar-jaiswal-355460255/" target="_blank">LinkedIn</a>
         </div>
