--- a/login.html
+++ b/login.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=WDXL+Lubrifont+SC&family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
     <title>Login</title>
     <style>
         body{
             height: 150vh;
             background-color: rgb(53, 51, 51);
+            font-family: "Fira Sans", sans-serif;
+            font-size: 15px;
+            font-weight: 200;
         }
         h1{
             text-align: center;
@@ -76,10 +82,10 @@
         button:active{
             background-color: goldenrod;
         }
-        div{
-            margin: auto;
+        p{
+            text-align: center;
             color: grey;
-            width: 184px;
+            width: 100%;
             margin-top: 8vh;
         }
     </style>
@@ -95,9 +101,7 @@
                 <label for="remember">Remember me</label>
             </div>
             <button type="submit">Login</button>
-            <div>
-                <p>Not a member? <a href="signup.html">Sign up now</a></p>
-            </div>  
+            <p>Not a member? <a href="signup.html">Sign up now</a></p> 
         </form>
     </main>
 </body>
