--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,9 @@
         body{
             height: 150vh;
             background-color: rgb(53, 51, 51);
+            font-family: "Fira Sans", sans-serif;
+            font-size: 15px;
+            font-weight: 200;
         }
         h1{
             text-align: center;
@@ -76,11 +79,12 @@
         button:active{
             background-color: goldenrod;
         }
-        div{
-            margin: auto;
+        p{
+            /* margin: auto; */
             color: grey;
-            width: 200px;
+            width: 100%;
             margin-top: 8vh;
+            text-align: center;
         }
     </style>
 </head>
@@ -96,9 +100,7 @@
                 <label for="remember">Remember me</label>
             </div>
             <button type="submit">Sign Up</button>
-            <div>
-                <p>Already a member? <a href="login.html">Login now</a></p>
-            </div>  
+            <p>Already a member? <a href="login.html">Login now</a></p>
         </form>
     </main>
 </body>
