added responsive mobile design for home page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="Anime-Head.css">
     <link rel="stylesheet" href="Anime-Main.css">
     <link rel="stylesheet" href="Anime-Footer.css">
+    <link rel="stylesheet" href="mobile.css">
 </head>
 <body>
     <header>
